# hadocrx

./: Cargo.toml  README.md  app.go  drugs.db  go.mod  log  log.txt  main.go  profile.go  pubspec.yaml  utils.go  wails.json
.github/workflows/: main.yml
android/app/: build.gradle
app/linux/: .gitignore  Cargo.toml  build.rs  compiled.gresource.old
app/linux/resources/: resources.xml
app/linux/src/: app.rs  main.rs  styles.rs
app/linux/src/components/: search_bar.rs
app/linux/src/hadocrx/: avro_phonetic.rs  db.rs  mod.rs  prescription.rs  utils.rs
app/linux/src/widgets/: avro_phonetic_entry.rs  bangla_entry.rs  dropdown_box.rs  medicine_box.rs  medicine_row.rs  mod.rs  search_box.rs  utils.rs
core/: Cargo.toml
core/src/: avro_phonetic.rs  db.rs  lib.rs  replacements.json  utils.rs
core/src/ffi/: avro_phonetic.rs  db.rs  mod.rs  prescription.rs  utils.rs
core/src/migrations/: drugs_V01.sql
core/src/models/: prescription.rs
frontend/: .prettierrc  package.json  package.json.md5  pnpm-lock.yaml  tailwind.config.js
frontend/src/: app.css
frontend/src/lib/: avro.js
frontend/src/routes/: +page.svelte  (+1 more)
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: avro_phonetic_textfield.dart  counter_app.dart  main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macros/: Cargo.toml
macros/src/: gtk_box.rs  gtk_grid.rs  lib.rs
test/: widget_test.dart
ui/linux/: Cargo.toml
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+15 files in other folders)
