[package]
name = "hadocrx-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
ffi-convert = "0.6.2"
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
hadocrx = { path = "../../core" }
hadocrx-macros = { path = "../../macros" }

[build-dependencies]
glib-build-tools = "0.21.0"
